--- a/index.html
+++ b/index.html
@@ -63,4 +63,4 @@
                                   <p style="padding-bottom: 16.5%;">
                                  <hr style="color:2px solid blue;">
                                       <footer style="text-align: center;padding-top:10px;padding-bottom:8px;background-color:darkturquoise;border-radius:10px;">
-                                        @2025 All right reserved by Muteesa 1 Royal University</footer>
+                                        @2025 All right reserved by Muteesa 1 Royal University--TIIGO AMIR--25/U/BIT/0049/M/DAY</footer>
