--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-image:url(photo.jpg);border:4px solid blue;height: 100%;padding-bottom: 17%;border-radius:6px;">
+<html lang="en" style="background-image:url(photo.jpg);border:4px solid blue;height: 100%;padding-bottom: 0.5%;border-radius:6px;">
     <head>
       <h1 style="background-color: royalblue;text-align: center;border-radius:20px;padding-top: 10px;"><b style="word-spacing: 8px;">MUTEESA 1 ROYAL UNIVERSITY</b><br>
       <img style="width: 3%;height:3%" src="logo.jpg">info@mru.ac.ug<br>
@@ -10,8 +10,8 @@
           <a  style="text-decoration: none;color:maroon" href="programmes.html"> Programmes</a></b></p>
         </head>
         <body>
-            <side-bar-menu style="background-color:grey;position:absolute;height:86%;width:145px;padding-top:0.005%;padding-right: 2%;border-radius:20px;">
-              <img style="width:80%;height:25%;margin-left: 10px;margin-top: 10px;" src="logo.png"><br>
+            <side-bar-menu style="background-color:grey;position:absolute;height:65%;width:145px;padding-top:0.005%;padding-right: 2%;border-radius:20px;padding-bottom:0%;">
+              <img style="width:80%;height:25%;margin-left: 20px;margin-top: 10px;border-radius:8px;" src="logo.png"><br>
               <a style="text-decoration: none;margin-left: 20px;line-height: 4;border: 1px solid blue;
               padding: 7px 26px 7px 20px;" href="#">Dashboard</a><br>
                 <a style="text-decoration: none;margin-left: 20px;line-height: 4;border: 1px solid blue;
@@ -22,7 +22,7 @@
                 padding: 7px 36px 7px 30px;"  href="#">Profile</a>
               <p style="text-align: center;word-spacing: 5px;"><a href=""><img style="width:15%;height:6%" src="telegram logo.png"> 
                 <a href="https://www.facebook.com/Muteesa1RoyalUniversity"><img style="width:15%;height:6%" src="Facebook logo.png">
-                  <a href="info@mru.ac.ug"><img style="width:15%;height:6%" src="email.png">
+                  <a href="https://www.info@mru.ac.ug"><img style="width:15%;height:6%" src="email.png">
                     <a href=""><img style="width:15%;height:6%" src="whats app logo2.jpg"> </a>
                     </p></side-bar-menu>
                     <p  style="border: 2px solid blue;">
@@ -60,10 +60,11 @@
                                     <td>4</td>
                                     <td>2,710,000</td></tr>
                                   </table>
-                                  <p style="padding-bottom: 16.5%;">
-                                 <hr style="color:2px solid blue">
-                                      <footer style="text-align: center;padding-top:8px;padding-bottom:10px;background-color:darkturquoise ;">
-                                        @2025 All right reserved by Muteesa 1 Royal University</footer>
+                                  <p style="padding-bottom: 16%;">
+                                 <hr style="color:2px solid blue;">
+                                      <footer style="text-align: center;padding-top:10px;padding-bottom:8px;background-color:darkturquoise;border-radius:10px;">
+                                        @2025 All right reserved by Muteesa 1 Royal University--TIIGO AMIR--25/U/BIT/0049/M/DAY</footer>
 
                                   
                                   
+
