--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-image:url(photo.jpg);border:4px solid blue;height: 100%;padding-bottom: 18%;border-radius:6px;">
+<html lang="en" style="background-image:url(photo.jpg);border:4px solid blue;height:500px;padding-bottom: 180px;border-radius:6px;">
     <head>
       <h1 style="background-color: royalblue;text-align: center;border-radius:20px;padding-top: 10px;"><b style="word-spacing: 8px;">MUTEESA 1 ROYAL UNIVERSITY</b><br>
       <img style="width: 3%;height:3%" src="logo.jpg">info@mru.ac.ug<br>
@@ -10,7 +10,7 @@
           <a  style="text-decoration: none;color:maroon" href="programmes.html"> Programmes</a></b></p>
         </head>
         <body>
-            <side-bar-menu style="background-color:grey;position:absolute;height:86%;width:145px;padding-top:0.005%;padding-right: 2%;border-radius:20px;">
+            <side-bar-menu style="background-color:grey;position:absolute;height:200px;width:145px;padding-top:0.005%;padding-right: 2%;border-radius:20px;">
               <img style="width:80%;height:25%;margin-left: 20px;margin-top: 10px;border-radius:8px;" src="logo.png"><br>
               <a style="text-decoration: none;margin-left: 20px;line-height: 4;border: 1px solid blue;
               padding: 7px 26px 7px 20px;" href="#">Dashboard</a><br>
